<resources>
    <string name="app_name">Calculator</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="todo">TODO</string>
</resources>