<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272727"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultado"
        app:srcCompat="@drawable/calculadora"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextSegundoNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="132dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segundo_numero"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrimerNumero" />

    <EditText
        android:id="@+id/editTextPrimerNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="132dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_numero"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Sumar"
        android:text="@string/sumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSegundoNumero"
        style="@style/ButtonCalculator" />

    <Button
        android:id="@+id/Restar"
        style="@style/ButtonCalculator"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="161dp"
        android:backgroundTint="#9C9C9C"
        android:padding="16dp"
        android:text="@string/restar"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sumar" />

    <Button
        android:id="@+id/Multiplicar"
        style="@style/ButtonCalculator"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        android:backgroundTint="#9C9C9C"
        android:padding="16dp"
        android:text="@string/multiplicar"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Restar" />

    <Button
        android:id="@+id/Dividir"
        style="@style/ButtonCalculator"
        android:layout_width="175dp"
        android:layout_height="54dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="163dp"
        android:backgroundTint="#9C9C9C"
        android:padding="16dp"
        android:text="@string/dividir"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multiplicar" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="60dp"
        android:hint="Desarrollado por fanavar7"
        android:padding="16dp"
        android:textColorHint="#9C9C9C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dividir"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>